infrastructure/cdk.out/acr-vpc.template.json
{
 "Resources": {
  "acrvpcD359A968": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "acr-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "acr-vpc/acr-vpc/Resource"
   }
  },
  "acrvpcpublicSubnet1SubnetB488EADB": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "acrvpcD359A968"
    },
    "AvailabilityZone": "us-west-2a",
    "CidrBlock": "10.0.0.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "acr-vpc/acr-vpc/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "acr-vpc/acr-vpc/publicSubnet1/Subnet"
   }
  },
  "acrvpcpublicSubnet1RouteTable44DCAE35": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "acrvpcD359A968"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "acr-vpc/acr-vpc/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "acr-vpc/acr-vpc/publicSubnet1/RouteTable"
   }
  },
  "acrvpcpublicSubnet1RouteTableAssociationE3E5D768": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "acrvpcpublicSubnet1RouteTable44DCAE35"
    },
    "SubnetId": {
     "Ref": "acrvpcpublicSubnet1SubnetB488EADB"
    }
   },
   "Metadata": {
    "aws:cdk:path": "acr-vpc/acr-vpc/publicSubnet1/RouteTableAssociation"
   }
  },
  "acrvpcpublicSubnet1DefaultRoute5EC3EC27": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "acrvpcpublicSubnet1RouteTable44DCAE35"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "acrvpcIGWEA8F5FD0"
    }
   },
   "DependsOn": [
    "acrvpcVPCGWD85E47BF"
   ],
   "Metadata": {
    "aws:cdk:path": "acr-vpc/acr-vpc/publicSubnet1/DefaultRoute"
   }
  },
  "acrvpcpublicSubnet1EIP94339D9C": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "acr-vpc/acr-vpc/publicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "acr-vpc/acr-vpc/publicSubnet1/EIP"
   }
  },
  "acrvpcpublicSubnet1NATGatewayF44F2F8D": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "acrvpcpublicSubnet1SubnetB488EADB"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "acrvpcpublicSubnet1EIP94339D9C",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "acr-vpc/acr-vpc/publicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "acrvpcpublicSubnet1DefaultRoute5EC3EC27",
    "acrvpcpublicSubnet1RouteTableAssociationE3E5D768"
   ],
   "Metadata": {
    "aws:cdk:path": "acr-vpc/acr-vpc/publicSubnet1/NATGateway"
   }
  },
  "acrvpcpublicSubnet2Subnet813139B7": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "acrvpcD359A968"
    },
    "AvailabilityZone": "us-west-2b",
    "CidrBlock": "10.0.1.0/24",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "acr-vpc/acr-vpc/publicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "acr-vpc/acr-vpc/publicSubnet2/Subnet"
   }
  },
  "acrvpcpublicSubnet2RouteTable7B6A0E73": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "acrvpcD359A968"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "acr-vpc/acr-vpc/publicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "acr-vpc/acr-vpc/publicSubnet2/RouteTable"
   }
  },
  "acrvpcpublicSubnet2RouteTableAssociationB09F5500": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "acrvpcpublicSubnet2RouteTable7B6A0E73"
    },
    "SubnetId": {
     "Ref": "acrvpcpublicSubnet2Subnet813139B7"
    }
   },
   "Metadata": {
    "aws:cdk:path": "acr-vpc/acr-vpc/publicSubnet2/RouteTableAssociation"
   }
  },
  "acrvpcpublicSubnet2DefaultRoute8EE853EC": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "acrvpcpublicSubnet2RouteTable7B6A0E73"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "acrvpcIGWEA8F5FD0"
    }
   },
   "DependsOn": [
    "acrvpcVPCGWD85E47BF"
   ],
   "Metadata": {
    "aws:cdk:path": "acr-vpc/acr-vpc/publicSubnet2/DefaultRoute"
   }
  },
  "acrvpcprivateSubnet1SubnetAF911B6B": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "acrvpcD359A968"
    },
    "AvailabilityZone": "us-west-2a",
    "CidrBlock": "10.0.2.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "acr-vpc/acr-vpc/privateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "acr-vpc/acr-vpc/privateSubnet1/Subnet"
   }
  },
  "acrvpcprivateSubnet1RouteTable6012C7A8": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "acrvpcD359A968"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "acr-vpc/acr-vpc/privateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "acr-vpc/acr-vpc/privateSubnet1/RouteTable"
   }
  },
  "acrvpcprivateSubnet1RouteTableAssociation150C935B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "acrvpcprivateSubnet1RouteTable6012C7A8"
    },
    "SubnetId": {
     "Ref": "acrvpcprivateSubnet1SubnetAF911B6B"
    }
   },
   "Metadata": {
    "aws:cdk:path": "acr-vpc/acr-vpc/privateSubnet1/RouteTableAssociation"
   }
  },
  "acrvpcprivateSubnet1DefaultRoute1F7DDB6C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "acrvpcprivateSubnet1RouteTable6012C7A8"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "acrvpcpublicSubnet1NATGatewayF44F2F8D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "acr-vpc/acr-vpc/privateSubnet1/DefaultRoute"
   }
  },
  "acrvpcprivateSubnet2SubnetF637E386": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "acrvpcD359A968"
    },
    "AvailabilityZone": "us-west-2b",
    "CidrBlock": "10.0.3.0/24",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "acr-vpc/acr-vpc/privateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "acr-vpc/acr-vpc/privateSubnet2/Subnet"
   }
  },
  "acrvpcprivateSubnet2RouteTableA6A13AB8": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "acrvpcD359A968"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "acr-vpc/acr-vpc/privateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "acr-vpc/acr-vpc/privateSubnet2/RouteTable"
   }
  },
  "acrvpcprivateSubnet2RouteTableAssociation43A07D7B": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "acrvpcprivateSubnet2RouteTableA6A13AB8"
    },
    "SubnetId": {
     "Ref": "acrvpcprivateSubnet2SubnetF637E386"
    }
   },
   "Metadata": {
    "aws:cdk:path": "acr-vpc/acr-vpc/privateSubnet2/RouteTableAssociation"
   }
  },
  "acrvpcprivateSubnet2DefaultRoute75D079C0": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "acrvpcprivateSubnet2RouteTableA6A13AB8"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "acrvpcpublicSubnet1NATGatewayF44F2F8D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "acr-vpc/acr-vpc/privateSubnet2/DefaultRoute"
   }
  },
  "acrvpcIGWEA8F5FD0": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "acr-vpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "acr-vpc/acr-vpc/IGW"
   }
  },
  "acrvpcVPCGWD85E47BF": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "acrvpcD359A968"
    },
    "InternetGatewayId": {
     "Ref": "acrvpcIGWEA8F5FD0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "acr-vpc/acr-vpc/VPCGW"
   }
  },
  "acrvpcRestrictDefaultSecurityGroupCustomResourceCEF41D66": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "acrvpcD359A968",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "403993201276"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "acr-vpc/acr-vpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-west-2:403993201276:security-group/",
             {
              "Fn::GetAtt": [
               "acrvpcD359A968",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "acr-vpc/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-403993201276-us-west-2",
     "S3Key": "e77031893275c08bcaa0a774aa8b611727afd045b3b5d8e1e6f0f04063d9d386.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs16.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "acr-vpc/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.e77031893275c08bcaa0a774aa8b611727afd045b3b5d8e1e6f0f04063d9d386",
    "aws:asset:property": "Code"
   }
  },
  "bastionsg9F6FB053": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "acr-vpc/bastion-sg",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "73.189.34.75/32",
      "Description": "from 73.189.34.75/32:ALL TRAFFIC",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "acrvpcD359A968"
    }
   },
   "Metadata": {
    "aws:cdk:path": "acr-vpc/bastion-sg/Resource"
   }
  },
  "BastionRole201D3308": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Description": "Role for Bastion host",
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/AmazonS3FullAccess"
       ]
      ]
     },
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/EC2InstanceProfileForImageBuilderECRContainerBuilds"
       ]
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "acr-vpc/BastionRole/Resource"
   }
  },
  "BastionHostInstanceProfile89CC0AF9": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "BastionRole201D3308"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "acr-vpc/BastionHost/InstanceProfile"
   }
  },
  "BastionHost04D516A6": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": "us-west-2a",
    "IamInstanceProfile": {
     "Ref": "BastionHostInstanceProfile89CC0AF9"
    },
    "ImageId": "ami-0a856db0b28c33df5",
    "InstanceType": "t2.micro",
    "KeyName": "my-ec2-key-pair",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "bastionsg9F6FB053",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "acrvpcpublicSubnet1SubnetB488EADB"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "MyAcrBastion"
     }
    ],
    "UserData": {
     "Fn::Base64": "#!/bin/bash"
    }
   },
   "DependsOn": [
    "BastionRole201D3308"
   ],
   "Metadata": {
    "aws:cdk:path": "acr-vpc/BastionHost/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/21QQW7CMBB8C3fHLXAoV4QqlEtrJYhr5ZgFtiR2ZK9BUZS/166bWpV6mtnZmdXYK7554c8L+XCFOt2KFhs+1iTVjQXpYwS14uOxV2x31kexY8I3LaraNxooaplVxhMcZNNC1rO2dc4olIRG/5ojeS1FhDdJe0nwkAMTFu+B5sOlJrCBz4bU5GfaUuh67UATq0F5izTsrfH9d4c/QqkdSa0gnUx8Yig7PlYmlZ5xXgtrztjCNLEKnPE2hr0j0+UxhP5fhewdT2BZeDlQ+NEL6kv0v3vqPU1MDHQ1+mnNl0u+Xnw6xMJ6TdgBrxJ+AST0oGibAQAA"
   },
   "Metadata": {
    "aws:cdk:path": "acr-vpc/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "bastionpublicdnsname": {
   "Value": {
    "Fn::GetAtt": [
     "BastionHost04D516A6",
     "PublicDnsName"
    ]
   }
  },
  "bastionprivateip": {
   "Value": {
    "Fn::GetAtt": [
     "BastionHost04D516A6",
     "PrivateIp"
    ]
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
